--fixed #1 footer z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,6 +115,7 @@ body{
         color: #ffffff;
         width: 100vw;
         position: fixed;
+        z-index: 99;
         bottom: 0;
         left: 0;
         .nav-text-offer {
